--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material-nextjs": "^7.1.0",
     "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
+    "mapbox-gl": "^3.12.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
