--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mui/material-nextjs": "^7.1.0",
     "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mapbox-gl": "^3.12.0",
     "next": "15.3.2",
+    "next-auth": "^5.0.0-beta.27",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
@@ -29,6 +31,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
